--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,19 @@
-.container {
-  padding: 0 2rem;
+
+
+.author {
+  font-weight: bold;
+  margin-left: 10px;
+  color: #0070f3;
+  text-decoration: none;
+}
+
+.author:hover {
+  text-decoration: underline;
 }
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 10px;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -42,7 +51,7 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 2rem;
 }
 
 .title,
@@ -114,3 +123,4 @@
     flex-direction: column;
   }
 }
+
